# fcrepo_migration_tools

./: Dockerfile  Dockerfile-pytools  README.md  batch-migrate.sh  bulkrax_change_set.csv  docker-compose-fcrepo.yml  example.env  export.sh  fcrepo_to_bulkrax.py  fcrepo_to_bulkrax.yml  fcrepo_tools.py  fedora_bulkrax_mapping.csv  migrate.sh  migration_troubleshooting.ipynb  pyproject.toml  remove_orphans.py
metadata/: hyrax-5-metadata-map.yml
pytools/: fcrepo_to_bulkrax.py  graph_part.py  mappings.py  queue.py  resources.py  s3_ocfl.py  utils.py  verify_bulkrax_migration.py  verify_migration.py
tests/: test_batch_handler.py  test_fcrepo_to_bulkrax.py  test_queues.py
tests/fcrepo-graph/: 000009.sst  000640.sst  000779.sst  001223.sst  001269.sst  001730.sst  001946.sst  002010.sst  002704.sst  002732.sst  002748.sst  002802.sst  002816.sst  002819.sst  002820.sst  002821.sst  002822.sst  002823.sst  002824.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
