[project]
name = "fcrepo_graph"
version = "0.1.0"
dependencies = [
    "click>=8.3.0",
    "more-itertools>=10.8.0",
    "pyoxigraph>=0.5.1",
    "pysolr>=3.10.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "fpdf>=1.7.2",
    "fpdf2>=2.8.5",
    "ipykernel>=7.0.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
